# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-07-18 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Network Properties translation files missing from previous commit

2017-06-29 Nicolas Ribot <nicolas.ribot@gmail.com>
  * Corrected properties files after bad unicode conversions.

2017-06-29 Nicolas Ribot <nicolas.ribot@gmail.com>
  * New Network Properties options: connection and read timeouts are now 
    configurable in the Network Properties options' tab.
    These timeout values are also applied to WMS and WFS Web Services 
    connections

2017-06-13 mmichaud <m.michael.michaud@orange.fr>
  * WMS getCapability often timeout : increase read timeout to 20s

2017-06-11 mmichaud <m.michael.michaud@orange.fr>
  * Fix combine layers : guarantee unique name for the new attribute

2017-06-10 mmichaud <m.michael.michaud@orange.fr>
  * Shapefile : handling of dbf containing deleted records
  * PLUS/GraphToolBox : adds HydrographicNetworkAnalysis plugin and improves
    Skeletonizer

2017-05-31 Nicolas Ribot <nicolas.ribot@gmail.com>
  * PostgreSQL JDBC driver : set the ApplicationName driver's property to allow 
    OpenJUMP to advertise its name to PostgreSQL backend

2017-05-31 mmichaud <m.michael.michaud@orange.fr>
  * ExtractPointsPlugIn : keep original feature id in attribute
  * SpatialJoinPlugIn : A and B attribute prefix were reversed

2017-05-20 Giuseppe Aruta
  * Task Frame title shows also projection description if it is set
    and matches any value available into srid.txt SRS registry file

2017-05-10 Giuseppe Aruta
  * Added TaskProperty plugin to read and modify project properties

* release 1.11 *****************************************************************

2017-04-05 mmichaud <m.michael.michaud@orange.fr>
  * Improve MakeValidOp robustness
